# haco

./: .env.example  .gitignore  AGENTS.md  CHECKLIST.md  CLAUDE.md  DOCS_INDEX.md  HACO.md  HACO_CANON.md  HANDOFF.md  README.md  checklist.md  config.example.yaml  context-notes.md  pyproject.toml
archive/: HACO.md  INDEX.md
bootstrap/prompts/: worker_01_contract_review.md  worker_02_cli_review.md  worker_03_schema_review.md  worker_04_scanner_repo_map_review.md  worker_05_budget_review.md  worker_06_provider_review.md  worker_07_candidate_format_review.md  worker_08_test_plan_review.md  worker_09_docs_review.md  worker_10_security_review.md  worker_11_adversarial_review.md
haco/: __init__.py  __main__.py  aggregate.py  bootstrap.py  brief_builder.py  budget.py  candidate_store.py  cli.py  confidence.py  config.py  context_pack.py  doctor.py  metrics.py  model_client.py  postflight.py  preflight.py  ranking.py  repo_map.py  run_store.py  scanner.py  schemas.py  utils.py  workers.py
prompts/: candidate_judge.md  context_compressor.md  doc_reporter.md  failure_fixer.md  file_locator.md  patch_candidate.md  task_router.md  test_candidate.md
tests/: conftest.py  test_aggregate.py  test_bootstrap.py  test_brief_builder.py  test_budget.py  test_candidate_store.py  test_cli.py  test_concurrency.py  test_confidence.py  test_context_pack.py  test_eval_locator.py  test_locator_rescan.py  test_postflight_mock.py  test_preflight_mock.py  test_provider.py  test_ranking.py  test_repo_map.py  test_run_store.py  test_scanner.py  test_schemas.py
